# docx_preeti_wasm

./: .gitignore  Cargo.toml  Readme.md  app.js  coi-serviceworker.min.js  cors_server.py  index.html  preeti.rs  style.css
pkg/: package.json  preeti_client.d.ts  preeti_client.js  preeti_client_bg.wasm  preeti_client_bg.wasm.d.ts
preeti_to_unicode/: app.js  index.html  worker.js
src/: lib.rs  preeti.json  unicode.json
src/tests/: mod.rs
unicode_to_preeti/: app.js  index.html  worker.js
