[package]
name = "preeti_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
htmlescape = "0.3.1"
regex = "1.10.2"
serde = {version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
